test/functions/ferguson/generic-default-nil3.good
generic-default-nil3.chpl:3: In function 'foo':
generic-default-nil3.chpl:4: error: the type of the actual argument 'x' is generic
note: generic actual arguments are not currently supported
generic-default-nil3.chpl:4: note: 'C?' now means nilable class with any management
generic-default-nil3.chpl:4: note: to migrate old code, change it to 'borrowed C?'
  generic-default-nil3.chpl:7: called as foo(x: C?)
