test/functions/ferguson/generic-default-nil3.chpl
class C { var x:int; }
  
proc foo(x: C? = nil) {
  writeln(x);
}

foo();
